--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,7 +14,7 @@
 }
 
 body, html  {
-    background-color: #5f2c82 ;
+    background-color:  #5f2c82;
     height: 100vh;
     width: 100vw;
 }
@@ -37,6 +37,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.450);
+
+    transition: width .3s, heigth .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
@@ -50,5 +53,13 @@ section#login > div#imagem {
 saction#login > div#formulario {
     display: block;
     padding: 10px;
+}
 
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p {
+    font-size: 0.9em;
 }
