--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -13,18 +13,19 @@
 
 /*  
     Paleta de cores
-    Verde: #49a09d
+    Verde: #55bed5
     Lilás: #5f2c82
 */ 
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
 
     body {
-        background-image: linear-gradient(to top, #5f2c82,#49a09d);
+        background-image: linear-gradient(to top, #5f2c82,#55bed5);
     }
 
     section#login { 
-        width: 90vw;
+        width: 80vw;
+        height: 280px;
     }
 
     section#login  > div#imagem {
@@ -42,11 +43,12 @@
 @media screen and (min-width: 992px) {
 
     body {
-        background-image: linear-gradient(to top, #5f2c82,#49a09d);
+        background-image: linear-gradient(to top, #5f2c82, #55bed5);
     }
 
     section#login { 
         width: 950px;
+        height: 350px;
     }
 
     section#login  > div#imagem {
@@ -65,6 +67,11 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
     }
 }
+
+    div#formulario > p {
+        font-size: 1em;
+        margin: 20px 0px;
+    }
