--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,12 +2,12 @@
 
 /*  
     Paleta de cores
-    Verde: #49a09d
+    Verde: #55bed5
     Lilás: #5f2c82
 */
 
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
@@ -34,9 +34,9 @@ section#login {
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.450);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.480);
 
     transition: width .3s, heigth .3s;
     transition-timing-function: ease;
@@ -47,7 +47,7 @@ section#login > div#imagem {
     background:  #5f2c82 url(../imagens/pexels-scottwebb-136205\ \(1\).jpg) no-repeat;
     background-size: cover;
     background-position: left bottom;
-    height: 200px;
+    height: 150px;
 }
 
 saction#login > div#formulario {
@@ -61,5 +61,82 @@ div#formulario > h1 {
 }
 
 div#formulario > p {
-    font-size: 0.9em;
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > i {
+    color: #ffff;
+     /* background-color: ; */
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #55bed5;
+    font-size: 1em;
+    width: calc(100% - 46px);
+    height: 100%;
+    transform: translatey(-12px);
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+}
+
+div.campo > input:focus-within {
+    background-color: #ffff;
+    border: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #4981a0;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #55bed5;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 3px;
+    margin-top: 3px;
+    background-color: #ffff;
+    color: #4981a0;
+    border: 1px solid #55bed5;
+    border-radius: 8px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: #55bed5;
+}
+
+form > a.botao > i {
+    font-size: 0.8em;
 }
