--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -24,42 +24,43 @@
     }
 
     section#login { 
-        width: 80vw;
-        height: 280px;
+        width: 60vw;
+        height: 85vh;
     }
 
     section#login  > div#imagem {
         float: left;
-        width: 30%;
-        height: 100%;
+        height: 35%;
+        width: 100%;
     }
 
     sectio#login > div#formulario {
         float: right;
-        width: 70%;
-    }
+        width: 10%;
+        height: 10%;
+    }  
 }
-
-@media screen and (min-width: 992px) {
+ @media screen and  (min-width: 992px) {
 
     body {
         background-image: linear-gradient(to top, #5f2c82, #55bed5);
     }
 
     section#login { 
-        width: 950px;
-        height: 350px;
+        width: 75vw;
+        height: 85vh;
     }
 
     section#login  > div#imagem {
-        float: right;
-        width: 50%;
-        height: 100%;
+        float: left;
+        width: 100%;
+        height: 40%;
     }
 
     sectio#login > div#formulario {
-        float: left;
-        width: 50%;
+        float: right;
+        width: 10%;
+        height: 10px;
     }    
 
     div#formulario > h1 {
@@ -67,11 +68,12 @@
     }
 
     div#formulario > p {
-        font-size: 1em;
+        font-size: 1.5em;
     }
-}
+
 
     div#formulario > p {
         font-size: 1em;
-        margin: 20px 0px;
-    }
+        margin: 15px 0px;
+    } 
+}
