--- a/estilos/style.css
+++ b/estilos/style.css
@@ -46,22 +46,22 @@ section#login > div#imagem {
     display: block;
     background:  #5f2c82 url(../imagens/pexels-scottwebb-136205\ \(1\).jpg) no-repeat;
     background-size: cover;
-    background-position: left bottom;
+    background-position: right;
     height: 150px;
 }
 
 saction#login > div#formulario {
     display: block;
-    padding: 10px;
+    padding: 20px;
 }
 
 div#formulario > h1 {
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 div#formulario > p {
-    font-size: 0.8em;
+    font-size: 1em;
 }
 
 form > div.campo {
@@ -94,7 +94,7 @@ div.campo > input {
     transform: translatey(-12px);
     border: 0px;
     border-radius: 8px;
-    padding: 4px;
+    padding: 10px;
 }
 
 div.campo > input:focus-within {
@@ -106,7 +106,7 @@ form > input[type=submit] {
     display: block;
     font-size: 1em;
     width: 100%;
-    height: 40px;
+    height: 35px;
     background-color: #4981a0;
     color: white;
     border: none;
@@ -123,7 +123,7 @@ form > a.botao {
     text-align: center;
     font-size: 1em;
     width: 100%;
-    height: 40px;
+    height: 35px;
     padding-top: 3px;
     margin-top: 3px;
     background-color: #ffff;
